--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,12 @@
             "email": "99043807+denim95@users.noreply.github.com"
         }
     ],
-    "require": {},
     "autoload": {
         "psr-4" : {
             "src\\" : "src/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.0"
     }
 }
